test/fixtures/syntax-error/edge-handlers/example.js
// Intentional JavaScript error
exportt function onRequest() {}
